--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,16 @@
 	"parserOptions": {
 		"ecmaVersion": 12,
 		"sourceType": "module"
+	},
+	"overrides": [
+		{
+			"files": ["**/*.test.js"],
+			"env": {
+				"jest": true
+			}
+		}
+	],
+	"rules": {
+		"no-console": "off"
 	}
 }
