--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"author": "muzazu",
 	"license": "MIT",
 	"scripts": {
-    "start": "cross-env node index.js",
+		"start": "cross-env node index.js",
 		"test": "jest"
 	},
 	"husky": {
@@ -21,7 +21,8 @@
 	"dependencies": {
 		"cross-env": "^7.0.3",
 		"discord.js": "^12.5.1",
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"node-fetch": "^2.6.1"
 	},
 	"devDependencies": {
 		"eslint": "^7.15.0",
