--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,6 @@ jobs:
         run: npm install
       # Runs test
       - name: Run lint
-        run: npm lint
+        run: npm run lint
       - name: Run test
-        run: npm test
+        run: npm run test
